--- a/01_HTML/index.html
+++ b/01_HTML/index.html
@@ -3,6 +3,17 @@
 
     <head>
         <title>첫번째 웹페이지</title>
+        <style>
+            h1 {
+                color: white;
+                background: black;
+            }
+            p {
+                color: red;
+                font-weight: bold;
+                font-style: italic;
+            }
+        </style>
     </head>
  
     <body>
