스크립트 테스트

--- a/01_HTML/css_test.html
+++ b/01_HTML/css_test.html
@@ -2,8 +2,16 @@
 <html>
 
     <head>
-        <title>두번째 웹페이지</title>
+        <meta charset="utf-8">
+
+        <title>두번째 웹페이지 스크립트</title>
         <link rel="stylesheet" href="styles/style.css" />
+        
+        <script>
+            // Comment...
+            // 경고 테스트
+            alert("Hello HTML~!");
+        </script>
     </head>
  
     <body>
