--- a/01_HTML/index.html
+++ b/01_HTML/index.html
@@ -2,7 +2,9 @@
 <html>
 
     <head>
+        <meta charset="utf-8">
         <title>첫번째 웹페이지</title>
+        
         <style>
             h1 {
                 color: white;
