--- a/01_HTML/script_test.html
+++ b/01_HTML/script_test.html
@@ -4,14 +4,15 @@
     <head>
         <meta charset="utf-8">
 
-        <title>css 웹페이지</title>
+        <title>두번째 웹페이지 스크립트</title>
         <link rel="stylesheet" href="styles/style.css" />
         
         <script>
             // Comment...
             // 경고 테스트
-            alert("Hello HTML~!");
+            // alert("Hello HTML~!");
         </script>
+        <script type="text/javascript" src="js/sample.js" ></script>
     </head>
  
     <body>
