자바스크립트 커밋

--- a/01_HTML/script_test.html
+++ b/01_HTML/script_test.html
@@ -10,13 +10,13 @@
         <script>
             // Comment...
             // 경고 테스트
-            // alert("Hello HTML~!");
+            alert("Hello HTML~!");
         </script>
         <script type="text/javascript" src="js/sample.js" ></script>
     </head>
  
     <body>
-        <h1>제목입니다.</h1>
+        <h1>제목입니다.
         <p>문단입니다.</p>
     </body>  
 
