--- a/01_HTML/text_header.html
+++ b/01_HTML/text_header.html
@@ -12,6 +12,16 @@
         <h5>제목 글자 태그 5</h5>
         <p>Paragraphs 문장</p>
         <h6>제목 글자 태그 6</h6>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+             Obcaecati adipisci maxime accusamus, quis, 
+             praesentium ipsam omnis sint molestiae similique, 
+             doloribus cum incidunt ex voluptatem quam. 
+             Fugit sapiente sed recusandae? Doloremque?
+        </p>
+        <hr>
+        <a href="https://www.naver.com">NAVER</a>
+        <a href="https://www.youtube.com"> Youtube</a>
     </body>
 
 </html>
