--- a/01_HTML/text_header.html
+++ b/01_HTML/text_header.html
@@ -12,16 +12,19 @@
         <h5>제목 글자 태그 5</h5>
         <p>Paragraphs 문장</p>
         <h6>제목 글자 태그 6</h6>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-             Obcaecati adipisci maxime accusamus, quis, 
-             praesentium ipsam omnis sint molestiae similique, 
+        <p><i><b><small>
+            <h1>Lorem</h1></small> <sub>ipsum</sub> <sup>dolor</sup>, sit amet consectetur adipisicing elit.
+             Obcaecati adipisci maxime accusamus, quis, </b>
+             praesentium ipsam omnis sint molestiae similique, </i><br>
              doloribus cum incidunt ex voluptatem quam. 
              Fugit sapiente sed recusandae? Doloremque?
         </p>
         <hr>
-        <a href="https://www.naver.com">NAVER</a>
-        <a href="https://www.youtube.com"> Youtube</a>
+        <a href="https://www.naver.com" target="_blank">NAVER</a><br>
+        <!-- _blank : 새 창에서 열기 -->
+        <a href="https://www.youtube.com" target="_parent"> Youtube</a><br>
+        <a href="https://www.microsoft.com" target="_parent"> Microsoft</a><br>
+        <a href="mailto:16jwodbs@naver.com" target=""> 정재윤 이메일</a>
     </body>
 
 </html>
