인풋, 미디어 html 연습

--- a/01_HTML/media_test.html
+++ b/01_HTML/media_test.html
@@ -10,6 +10,13 @@
     <img src="https://www.ui4u.go.kr/depart/img/content/sub03/img_con03030100_01.jpg" 
     width="80%"/>
     <img src="" alt="없는 이미지" /><br>
-    <audio src="media/Kalimba.mp3" controls="controls"></audio>
+    <audio controls="controls">
+        <source src="media/Kalimba.mp3" type="audio/mp3" />
+        <source src="media/Kalimba.ogg" type="audio/ogg" />
+    </audio>
+    <video controls poster="https://https://placehold.it/640x360">
+        <source src="media/Wildlife.mp4" type="video/mp4" />
+        <source src="media/Wildlife.webm" type="video/webm" />
+    </video>
 </body>
 </html>
