--- a/01_HTML/form_test.html
+++ b/01_HTML/form_test.html
@@ -29,6 +29,14 @@
         <!-- 기타 -->
         <input type="image" src="https://placehold.it/400x250"><br>
 
+        <!-- 선택컨트롤(콤보박스 or 드랍다운) -->
+        <select>
+            <option>김밥</option>
+            <option selected>떡볶이</option>
+            <option>순대</option>
+            <option>어묵</option>
+        </select>
+
     </form>
     <!-- 사용자 입력 양식 -->
 </body>
