--- a/01_HTML/text_content.html
+++ b/01_HTML/text_content.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
+    <meta charset='utf-8'>
         <title>HTML5 + CSS Text</title>
     </head>
     <body>
