--- a/01_HTML/text_header.html
+++ b/01_HTML/text_header.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
+    <meta charset='utf-8'>
         <title>HTML5 + CSS3 TEXT</title>
     </head>
 
