--- a/02_CSS/selector_test.html
+++ b/02_CSS/selector_test.html
@@ -5,6 +5,33 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        #header {
+            width:800px;
+            margin:0 auto;
+            background:red;
+        }
+        #wrap {
+            width:800px;
+            margin:0 auto;
+            overflow:hidden;
+        }
+        #aside {
+            width:200px;
+            float:left;
+            background:blue;
+        }
+        #content {
+            width:600px;
+            float:left;
+            background:green;
+        }
+        #footer {
+            width:800px;
+            margin: 0 auto;
+            background:teal;
+        }
+    </style>
 </head>
 <body>
     <div id="header">
