--- a/02_CSS/position_2_test.html
+++ b/02_CSS/position_2_test.html
@@ -9,14 +9,14 @@
         /* body 밑의 직속 자손인 div 태그만 */
         body > div {
             width: 400px;
-            height: 400px;
+            height: 40px;
             border: 5px solid black;
             position: relative;
-            /*
-            position: absolute;
+            /* position: absolute;
             left:10px;
-            top:80px;
-            */
+            top:80px; */
+            overflow: scroll;
+            /* overflow: hidden; */
         }
         .box {
             width: 100px;
