css 레이아웃 연습

--- a/02_CSS/position_2_test.html
+++ b/02_CSS/position_2_test.html
@@ -15,8 +15,9 @@
             /* position: absolute;
             left:10px;
             top:80px; */
-            overflow: scroll;
-            /* overflow: hidden; */
+            overflow: hidden;
+            /* overflow: scroll; */
+            float: left;
         }
         .box {
             width: 100px;
