--- a/04_PROJECT/index.html
+++ b/04_PROJECT/index.html
@@ -90,7 +90,7 @@
             // 클릭 이벤트 
             $(".paper").click(function() {
 
-                // 일부 없애기
+                // 일부 보이기 (테스트)
                 var papers =$(".paper");
                 for(let i = 0; i < 10; i++)
                     $(papers[i]).show();
@@ -200,8 +200,8 @@
             var random_num;
             for(let i = 0; i < 20; i++) {
                 random_num = 200 + Math.floor(Math.random() * 101);
-                $(himg[i]).attr("src", 
-                "http://placekitten.com/190/" + random_num.toString());
+                //$(himg[i]).attr("src", 
+                //"http://placekitten.com/190/" + random_num.toString());
 
                 var p_content =$(".paper-content");
                 var colorR = Math.floor((Math.random() * 256));
