--- a/04_PROJECT/index.html
+++ b/04_PROJECT/index.html
@@ -41,7 +41,9 @@
             } 
             return arrResult.join(''); 
         }
+
         $(document).ready(function() {
+            // 화살표 이미지 이동 구현
             $(document).keyup(function() {
                 console.log(lightboxflag);
                 if (event.keyCode == '37' && lightboxflag) {
@@ -52,6 +54,7 @@
                 }
             });
 
+            // 검색 이미지 필터링 구현
             $("input[name=input-search-name]").keydown(function (key) {
                 console.log("진입1");
  
